2006-10-30 Markus Schaber <schabi@logix-tt.com>

	* capi/geos_c.cpp: more focused 'using' directives.
	* capi/geos_c.h.in: let the enum visible by geos_c.cpp
	  now that there are no more name clashes.

2006-10-30 Sandro Santilli <strk@refractions.net>

	* source/operation/overlay/OverlayOp.cpp: reduce
	  default verbosity.

2006-10-30 Markus Schaber <schabi@logix-tt.com>

	* capi/geos_c.cpp:
	  Remove a typedef which is also included via Header;
	  Use dynamic_cast instead of C cast in 2 cases to allow the
	  RTTI type check;
	  Replace "geoms" temp vector in polygonizer function with a loop,
	  this saves us at least one of the two vector copies;
	  Drop 2 unneded const_cast occurences;
	  Allow calling getNumGeometries against non-collections;
	  2 comment / whitespace cleanups.
	* capi/geos_c.h.in:
	  Added a comment explaining ou #ifndef magic;
	  Unified the two #ifndef into a single one.

2006-10-30 Sandro Santilli <strk@refractions.net>

	* capi/: test.expected, testrunner.sh, Makefile.am:
	  Added a run of ./geostest as part of 'make check'

2006-10-30 Markus Schaber <schabi@logix-tt.com>

	* capi/: geos_c.cpp, geos_c.h.in: 
	  Changed the C-API implementation to actually include the header
	  that's included by the clients, this allows the compiler to check
	  declarations and implementation for consistency, fixed geos_c.cpp
	  accordingly (const-correctness, mainly).

2006-10-30 Sandro Santilli <strk@refractions.net>

	* capi/geostest.c: added some checks of return from CAPI 
	  functions returning GEOSGeom (not all, just a few:)

2006-10-27 Markus Schaber <schabi@logix-tt.com>

	* algorithm::InteriorPointLine (ctor): take Geometry by const-pointer.
	* geom::Geometry (getInteriorPoint): made a const-method
	* operation::polygonize::Polygonizer: implement filter_ro rather
	  then filter_rw, as it doesn't change the Geometry, propagated
	  change to internal interfaces (add methods)

2006-10-26 Sandro Santilli <strk@refractions.net>
