@@ -51,8 +51,8 @@
 #include <memory>
 
 // Some extra magic to make type declarations in geos_c.h work - for cross-checking of types in header.
-#define GEOSGeom geos::geom::Geometry*
-#define GEOSCoordSeq geos::geom::CoordinateSequence*
+#define GEOSGeometry geos::geom::Geometry
+#define GEOSCoordSequence geos::geom::CoordinateSequence
 #include "geos_c.h"
 
 /// Define this if you want operations triggering Exceptions to
